# dupfi1

./: Cargo.toml  README.md  idea.txt
src/: app.rs  file_scanner.rs  file_utils.rs  main.rs  preview.rs  tests.rs
