 [package]
name = "dupfi"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22.0", features = ["default_fonts", "glow"] }
egui = "0.22.0"
winapi = { version = "0.3.9", features = ["winuser", "windef", "libloaderapi"] }
sha2 = "0.10.8"
walkdir = "2.4.0"
rayon = "1.8.0"
image = "0.24.7"
rfd = "0.12.1"
notify = "6.1.1"
crossbeam-channel = "0.5.8"

[dev-dependencies]
tempfile = "3.9.0"
